--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <!-- bootstrap local -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
+   
 
   </head>
 
@@ -70,15 +67,15 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#"
+                  <a class="nav-link" aria-current="page" href="#footer"
                     >Contact</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="#pricing">Pricing</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Download</a>
+                  <a class="nav-link" href="#cta">Download</a>
                 </li>
               </ul>
             </div>
@@ -270,14 +267,23 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <h3 class="final-para">Find the True Love of Your Dog's Life Today.</h3>
+    <div class="btn-div">
+      <button class="btn btn-dark btn-lg bottom-button" type="button"><i class="fa-brands fa-apple"></i> Download</button>
+      <button class="btn btn-light btn-lg bottom-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
+    </div>
     </section>
+
 
     <!-- Footer -->
 
     <footer id="footer">
+    <div class="socialmedia-div">
+      <i class="fa-brands fa-twitter socialmedia-icon"></i>
+      <i class="fa-brands fa-facebook socialmedia-icon"></i>
+      <i class="fa-brands fa-instagram socialmedia-icon"></i>
+      <i class="fa-solid fa-envelope socialmedia-icon"></i>
+    </div>
       <p>© Copyright TinDog</p>
     </footer>
   </body>
